tests/ui/parallel-rustc/cache-after-waiting-issue-111528.stderr
error: symbol `fail` is already defined
  --> $DIR/cache-after-waiting-issue-111528.rs:14:1
   |
LL | pub fn b() {
   | ^^^^^^^^^^

error: aborting due to 1 previous error

